--- a/package.json
+++ b/package.json
@@ -7,16 +7,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "mobx": "^3.1.16",
-    "mobx-react": "^4.2.1",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.45.1"
+    "lodash": "^4.17.4",
+    "mobx": "^3.1.5",
+    "mobx-react": "^4.1.2",
+    "moment": "^2.17.1",
+    "react": "^15.4.2",
+    "react-native": "^0.42.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "babel-jest": "20.0.3",
-    "babel-preset-react-native": "2.0.0",
-    "jest": "20.0.4",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "18.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-react-native": "1.9.1",
+    "eslint": "^3.15.0",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-flowtype": "^2.30.0",
+    "eslint-plugin-react": "^6.10.0",
+    "jest": "18.1.0",
+    "react-test-renderer": "15.4.2"
   },
   "jest": {
     "preset": "react-native"
